--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 #overlay { position: fixed; inset:0; background: rgba(0,0,0,0.40); display:flex; align-items:center; justify-content:center; z-index:40; }
 #overlay[aria-hidden="true"] { display:none; }
 #overlay-content {
-    width:45%;           /* Max width 45% */
-    max-width:45%;
+    width:45%;          /* max width 45% */
+    max-width:90vw;
     height:auto;         /* auto-adjust height */
     background: rgba(255,255,255,0.18);
     backdrop-filter: blur(10px);
@@ -35,16 +35,23 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
     justify-content:flex-start;
     gap:12px;
     margin:0 auto;
+    line-height:1.3;
 }
-#overlay-content p { margin:0; word-wrap: break-word; max-width: 100%; line-height:1.4em; }
+#overlay-content p { margin:0; }
 #intro-icon { width:80px; height:80px; margin:0 auto 12px auto; display:block; } /* centered */
 #instructions-line { font-weight:700; text-decoration:underline; margin-top:8px; color:#fff; }
-#instructions-list { margin:6px 0 0 0; line-height:1.6em; color:#fff; }
+#instructions-list { margin:6px 0 0 0; line-height:1.6em; color:#fff; text-align:center; }
 #instructions-list p { margin:6px 0; text-align:center; }
-#dismiss-message { margin-top:0; font-size:0.95rem; color:#d0d0d0; text-align:center; }
 
-/* tooltip preview */
-#tooltip-preview { display:none; position:fixed; width:max-content; max-width:220px; background: rgba(0,0,0,0.9); color:#fff; text-align:center; padding:4px; border-radius:6px; z-index:9999; pointer-events:auto; font-size:0.85rem; line-height:1.2; box-shadow:0 6px 18px rgba(0,0,0,0.6); }
+/* divider line */
+#overlay-content hr { border:1px solid #fff; margin:12px auto; width:60%; }
+
+/* dismiss message */
+#dismiss-message { margin-top:24px; font-size:0.95rem; color:#d0d0d0; text-align:center; white-space:pre-line; }
+
+/* tooltip preview (independent) */
+#tooltip-preview { display:none; position:fixed; width:max-content; max-width:220px; background: rgba(0,0,0,0.9); color:#fff; text-align:center; padding:6px 10px; border-radius:6px; z-index:9999; pointer-events:auto; font-size:0.85rem; line-height:1.2; box-shadow:0 6px 18px rgba(0,0,0,0.6); }
+#tooltip-preview img { width:100%; height:auto; object-fit:contain; border-radius:6px; }
 
 /* hotspot panel */
 #hotspot-panel { position: fixed; top:18px; left:50%; transform:translateX(-50%); background: rgba(0,0,0,0.20); backdrop-filter: blur(10px); padding:12px 18px; border-radius:14px; color:#fff; font-size:0.98rem; text-align:center; max-width:82%; z-index:20; display:none; }
@@ -100,7 +107,7 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
     <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
     <p>If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; color:#bfe; cursor:pointer;">here</span>.</p>
 
-    <hr style="border:1px solid #fff; margin:12px auto; width:50%;">
+    <hr>
 
     <div id="instructions-line">Instructions</div>
     <div id="instructions-list">
@@ -152,7 +159,11 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
 <script>
 const panoURL="https://i.imgur.com/FYdmUI3.jpeg";
-const viewer=pannellum.viewer('panorama',{type:'equirectangular', panorama:panoURL, autoLoad:true, hfov:100, showFullscreenCtrl:true, showZoomCtrl:false, compass:false});
+const viewer=pannellum.viewer('panorama',{
+    type:'equirectangular', panorama:panoURL, autoLoad:true,
+    hfov:100, showFullscreenCtrl:true, showZoomCtrl:false, compass:false,
+    autoRotate:1, autoRotateInactivityDelay:10000, autoRotateStopDelay:0
+});
 
 const overlay=document.getElementById('overlay');
 const overlayContent=document.getElementById('overlay-content');
@@ -182,23 +193,21 @@ function dismissOverlay(e){
 }
 overlay.addEventListener('click', dismissOverlay);
 
-/* tooltip hover tracking cursor */
-function showTooltip(){
-  tooltip.style.display='block'; tooltip.setAttribute('aria-hidden','false');
-}
-previewLink.addEventListener('mouseenter', showTooltip);
+/* tooltip hover tracking cursor independently */
+previewLink.addEventListener('mouseenter', ()=>{ tooltip.style.display='block'; tooltip.setAttribute('aria-hidden','false'); });
 previewLink.addEventListener('mousemove', e=>{
-  const rect=previewLink.getBoundingClientRect();
-  const ttWidth=tooltip.offsetWidth; const ttHeight=tooltip.offsetHeight;
-  let top=rect.top-ttHeight-10; let left=rect.left+rect.width/2-ttWidth/2;
-  if(top<8) top=rect.bottom+10;
+  const ttWidth=tooltip.offsetWidth;
+  const ttHeight=tooltip.offsetHeight;
+  let left=e.clientX-ttWidth/2;
+  let top=e.clientY-ttHeight-10;
+  if(top<8) top=e.clientY+10;
   if(left<8) left=8;
   if(left+ttWidth>window.innerWidth-8) left=window.innerWidth-ttWidth-8;
   tooltip.style.left=Math.round(left)+'px';
   tooltip.style.top=Math.round(top)+'px';
 });
 previewLink.addEventListener('mouseleave', ()=>{ setTimeout(()=>{ if(!tooltip.matches(':hover')&&!previewLink.matches(':hover')){ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); } },80); });
-tooltip.addEventListener('mouseenter', showTooltip);
+tooltip.addEventListener('mouseenter', ()=>{ tooltip.style.display='block'; tooltip.setAttribute('aria-hidden','false'); });
 tooltip.addEventListener('mouseleave', ()=>{ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); });
 previewLink.addEventListener('click', e=>{ e.stopPropagation(); e.preventDefault(); window.open('https://linktr.ee/lexofdystopia','_blank','noopener'); });
 tooltipLink.addEventListener('click', e=>{ e.stopPropagation(); });
@@ -222,44 +231,6 @@ document.addEventListener('keydown', e=>{
     if(youtubeOverlay.style.display==='flex'){ youtubeOverlay.style.opacity=0; setTimeout(()=>{ youtubeOverlay.style.display='none'; youtubeFrame.src=''; },280); }
     if(qrOverlay.style.display==='flex'){ qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',280); }
   }
-});
-
-/* ----- Slow Auto-Pan ----- */
-let autoPanSpeed = 0.05; // degrees/frame
-let autoPanActive = true;
-let inactivityTimeout;
-
-function startAutoPan() { autoPanActive = true; requestAnimationFrame(autoPanStep); }
-function stopAutoPan() { autoPanActive = false; }
-
-function autoPanStep() {
-    if(!autoPanActive) return;
-    viewer.setYaw(viewer.getYaw() + autoPanSpeed);
-    requestAnimationFrame(autoPanStep);
-}
-
-function resetInactivity() {
-    stopAutoPan();
-    clearTimeout(inactivityTimeout);
-    inactivityTimeout = setTimeout(() => startAutoPan(), 10000);
-}
-
-['mousedown','mousemove','touchstart','wheel','keydown'].forEach(evt => document.addEventListener(evt, resetInactivity));
-
-startAutoPan();
-
-/* ----- Right Click + Printscreen flash ----- */
-document.addEventListener('contextmenu', e=>e.preventDefault());
-document.addEventListener('keydown', e=>{
-    if(e.key==='PrintScreen'){
-        const flash=document.createElement('div');
-        flash.style.position='fixed';
-        flash.style.inset='0';
-        flash.style.background='#fff';
-        flash.style.zIndex=99999;
-        document.body.appendChild(flash);
-        setTimeout(()=>document.body.removeChild(flash),500);
-    }
 });
 </script>
 </body>
