--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 #hotspot-panel { position: fixed; top:18px; left:50%; transform:translateX(-50%); background: rgba(0,0,0,0.20); backdrop-filter: blur(10px); padding:12px 18px; border-radius:14px; color:#fff; font-size:0.98rem; text-align:center; max-width:82%; z-index:20; display:none; }
 
 /* 360 video panel */
-#video-link-panel { position: fixed; top: calc(48px + 60px + 12px); left:50%; transform:translateX(-50%); background: rgba(0,0,0,0.20); backdrop-filter: blur(10px); padding:10px 14px; border-radius:12px; color:#fff; font-size:0.96rem; text-align:center; max-width:66%; z-index:20; cursor:pointer; display:none; }
+#video-link-panel { position: fixed; top: calc(48px + 60px + 12px); left:50%; transform:translateX(-50%); background: rgba(0,0,0,0.20); backdrop-filter: blur(10px); padding:10px 14px; border-radius:12px; color:#444; font-size:0.96rem; text-align:center; max-width:66%; z-index:20; cursor:pointer; display:none; }
 
 /* youtube modal */
 #youtube-overlay { display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55); z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s; }
@@ -85,6 +85,19 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
     box-shadow:none;
 }
 
+/* preview-link pill */
+#preview-link {
+    display:inline-block;
+    padding:4px 10px;
+    border-radius:12px;
+    background: rgba(255,255,255,0.18);
+    backdrop-filter: blur(6px);
+    color:#bfe;
+    cursor:pointer;
+    transition: background 0.2s;
+}
+#preview-link:hover { background: rgba(255,255,255,0.25); }
+
 /* responsive adjustments */
 @media(max-width:900px){
     #overlay-content{width:86vw;height:auto;padding:18px;font-size:0.98rem;}
@@ -105,7 +118,7 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
   <div id="overlay-content" role="document">
     <img id="intro-icon" src="LexIconWhite,png.png" alt="Lex Icon">
     <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
-    <p>If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; color:#bfe; cursor:pointer;">here</span>.</p>
+    <p>If you would like to see my other work click <span id="preview-link">here</span>.</p>
 
     <hr>
 
