--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Saira:wght@400;700&display=swap" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.14.0/gsap.min.js"></script>
 <style>
 * { box-sizing:border-box; }
 html,body { height:100%; margin:0; font-family:'Saira',sans-serif; background:#000; overflow:hidden; user-select:none; }
@@ -21,24 +22,14 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 #overlay { position: fixed; inset:0; background: rgba(0,0,0,0.40); display:flex; align-items:center; justify-content:center; z-index:40; }
 #overlay[aria-hidden="true"] { display:none; }
 #overlay-content {
-    width:45%;          /* max width 45% */
-    max-width:90vw;
-    height:auto;         /* auto-adjust height */
-    background: rgba(255,255,255,0.18);
-    backdrop-filter: blur(10px);
-    border-radius:18px;
-    padding:24px;
-    color:#fff;
-    text-align:center;
-    display:flex;
-    flex-direction:column;
-    justify-content:flex-start;
-    gap:12px;
-    margin:0 auto;
+    width:45%; max-width:90vw; height:auto;
+    background: rgba(255,255,255,0.18); backdrop-filter: blur(10px);
+    border-radius:18px; padding:24px; color:#fff; text-align:center;
+    display:flex; flex-direction:column; justify-content:flex-start; gap:12px; margin:0 auto;
     line-height:1.3;
 }
 #overlay-content p { margin:0; }
-#intro-icon { width:80px; height:80px; margin:0 auto 12px auto; display:block; } /* centered */
+#intro-icon { width:80px; height:80px; margin:0 auto 12px auto; display:block; cursor:pointer; }
 #instructions-line { font-weight:700; text-decoration:underline; margin-top:8px; color:#fff; }
 #instructions-list { margin:6px 0 0 0; line-height:1.6em; color:#fff; text-align:center; }
 #instructions-list p { margin:6px 0; text-align:center; }
@@ -47,7 +38,7 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 #overlay-content hr { border:1px solid #fff; margin:12px auto; width:60%; }
 
 /* dismiss message */
-#dismiss-message { margin-top:24px; font-size:0.95rem; color:#d0d0d0; text-align:center; white-space:pre-line; }
+#dismiss-message { margin-top:24px; font-size:0.95rem; color:#d0d0d0; text-align:center; white-space:pre-line; opacity:1; }
 
 /* tooltip preview (independent) */
 #tooltip-preview { display:none; position:fixed; width:max-content; max-width:220px; background: rgba(0,0,0,0.9); color:#fff; text-align:center; padding:6px 10px; border-radius:6px; z-index:9999; pointer-events:auto; font-size:0.85rem; line-height:1.2; box-shadow:0 6px 18px rgba(0,0,0,0.6); }
@@ -57,7 +48,8 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 #hotspot-panel { position: fixed; top:18px; left:50%; transform:translateX(-50%); background: rgba(0,0,0,0.20); backdrop-filter: blur(10px); padding:12px 18px; border-radius:14px; color:#fff; font-size:0.98rem; text-align:center; max-width:82%; z-index:20; display:none; }
 
 /* 360 video panel */
-#video-link-panel { position: fixed; top: calc(48px + 60px + 12px); left:50%; transform:translateX(-50%); background: rgba(0,0,0,0.20); backdrop-filter: blur(10px); padding:10px 14px; border-radius:12px; color:#444; font-size:0.96rem; text-align:center; max-width:66%; z-index:20; cursor:pointer; display:none; }
+#video-link-panel { position: fixed; top: calc(48px + 60px + 12px); left:50%; transform:translateX(-50%); background: rgba(0,0,0,0.20); backdrop-filter: blur(10px); padding:10px 14px; border-radius:12px; color:#fff; font-size:0.96rem; text-align:center; max-width:66%; z-index:20; cursor:pointer; display:none; }
+#manhattan-video-text { display:inline-block; padding:4px 8px; border-radius:8px; background:rgba(50,50,50,0.2); color:#ccc; text-decoration:none; cursor:pointer; }
 
 /* youtube modal */
 #youtube-overlay { display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55); z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s; }
@@ -76,27 +68,7 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 #vr-button { top:64px; display:none; }
 
 /* Fullscreen button match QR style */
-.pannellum-fullscreen-button {
-    padding:8px 12px;
-    border-radius:12px;
-    background: rgba(0,0,0,0.18);
-    backdrop-filter: blur(8px);
-    color:#fff;
-    box-shadow:none;
-}
-
-/* preview-link pill */
-#preview-link {
-    display:inline-block;
-    padding:4px 10px;
-    border-radius:12px;
-    background: rgba(255,255,255,0.18);
-    backdrop-filter: blur(6px);
-    color:#bfe;
-    cursor:pointer;
-    transition: background 0.2s;
-}
-#preview-link:hover { background: rgba(255,255,255,0.25); }
+.pannellum-fullscreen-button { padding:8px 12px; border-radius:12px; background: rgba(0,0,0,0.18); backdrop-filter: blur(8px); color:#fff; box-shadow:none; }
 
 /* responsive adjustments */
 @media(max-width:900px){
@@ -118,7 +90,7 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
   <div id="overlay-content" role="document">
     <img id="intro-icon" src="LexIconWhite,png.png" alt="Lex Icon">
     <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
-    <p>If you would like to see my other work click <span id="preview-link">here</span>.</p>
+    <p>If you would like to see my other work click <span id="preview-link" style="cursor:pointer; display:inline-block; border-radius:6px; padding:2px 6px; background:rgba(255,255,255,0.18);">here</span>.</p>
 
     <hr>
 
@@ -147,7 +119,7 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 </div>
 
 <div id="video-link-panel" aria-hidden="true">
-  <span id="manhattan-video-text" style="text-decoration:underline; color:#9fd6ff;">Click Here to Watch a 360 Video of this Location</span>
+  <span id="manhattan-video-text">Click Here to Watch a 360 Video of this Location</span>
 </div>
 
 <div id="license-bar">Loading license...</div>
@@ -192,6 +164,8 @@ const qrContent=document.getElementById('qr-content');
 const youtubeOverlay=document.getElementById('youtube-overlay');
 const youtubeFrame=document.getElementById('youtube-frame');
 const licenseBar=document.getElementById('license-bar');
+const introIcon=document.getElementById('intro-icon');
+const dismissMsg=document.getElementById('dismiss-message');
 
 /* LICENSE load */
 fetch('LICENSE').then(r=>r.ok?r.text():Promise.reject('no')).then(text=>licenseBar.textContent=text).catch(()=>{licenseBar.textContent='LICENSE file not found.';});
@@ -203,6 +177,8 @@ function dismissOverlay(e){
   overlay.style.display='none';
   hotspotPanel.style.display='block';
   videoLinkPanel.style.display='block';
+  // Pulse dismiss message
+  gsap.fromTo(dismissMsg,{opacity:0},{opacity:1, duration:0.5});
 }
 overlay.addEventListener('click', dismissOverlay);
 
@@ -245,6 +221,71 @@ document.addEventListener('keydown', e=>{
     if(qrOverlay.style.display==='flex'){ qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',280); }
   }
 });
+
+/* dissolve icon into dust */
+function dissolveIcon(icon) {
+    const img = icon;
+    const rect = img.getBoundingClientRect();
+    const canvas = document.createElement('canvas');
+    canvas.width = rect.width;
+    canvas.height = rect.height;
+    canvas.style.position = 'absolute';
+    canvas.style.left = rect.left + 'px';
+    canvas.style.top = rect.top + 'px';
+    canvas.style.pointerEvents = 'none';
+    canvas.style.zIndex = 1000;
+    document.body.appendChild(canvas);
+
+    const ctx = canvas.getContext('2d');
+    ctx.drawImage(img,0,0,rect.width,rect.height);
+    img.style.visibility='hidden';
+
+    const particleSize=4;
+    const particles=[];
+    const imageData=ctx.getImageData(0,0,rect.width,rect.height);
+
+    for(let y=0;y<rect.height;y+=particleSize){
+        for(let x=0;x<rect.width;x+=particleSize){
+            const i=(y*rect.width+x)*4;
+            const r=imageData.data[i], g=imageData.data[i+1], b=imageData.data[i+2], a=imageData.data[i+3];
+            if(a>0) particles.push({x:x,y:y,color:`rgba(${r},${g},${b},${a/255})`,ox:x,oy:y});
+        }
+    }
+
+    ctx.clearRect(0,0,canvas.width,canvas.height);
+
+    function drawParticles(){
+        ctx.clearRect(0,0,canvas.width,canvas.height);
+        particles.forEach(p=>ctx.fillRect(p.x,p.y,particleSize,particleSize));
+        particles.forEach(p=>{ ctx.fillStyle=p.color; ctx.fillRect(p.x,p.y,particleSize,particleSize); });
+    }
+
+    gsap.to(particles,{
+        duration:1.2,
+        x:p=>p.x+(Math.random()*200-100),
+        y:p=>p.y+(Math.random()*200-100),
+        onUpdate:drawParticles,
+        onComplete:()=>{
+            gsap.to(particles,{
+                duration:1.2,
+                x:p=>p.ox,
+                y:p=>p.oy,
+                onUpdate:drawParticles,
+                onComplete:()=>{
+                    document.body.removeChild(canvas);
+                    img.style.visibility='visible';
+                }
+            });
+        }
+    });
+}
+
+// auto-dissolve intro icon after 0.7s
+setTimeout(()=>dissolveIcon(introIcon),700);
+
+/* pulsing click anywhere message */
+gsap.to(dismissMsg,{opacity:0.1, duration:0.8, repeat:-1, yoyo:true});
 </script>
+
 </body>
 </html>
